--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,8 @@
     transition: border 0.3s ease; 
     letter-spacing: 1px; 
     background-color: rgb(184, 54, 54);
-    margin-left: 10%;
+    margin-left: 20%;
+    margin-top: 10%;
 }
 
 .header .logo:hover {
@@ -70,9 +71,6 @@
     padding-right: 5rem;
     padding:4%;
 
-}
-.logo{
-    display:right;
 }
 
 
