--- a/css/style.css
+++ b/css/style.css
@@ -109,7 +109,7 @@ body{
     display: flex;
 }
 
-#buscadorestudiantes{
+#alumnos{
     background: rgb(254, 205, 165);
     min-height: 100vh;
     display: flex;
