--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@ body{
     min-height: 100vh;
     display: flex;
   }
-#ingresoprofesores{
+#periodos{
     background: lightgreen;
     min-height: 100vh;
     display: flex;
