--- a/css/style.css
+++ b/css/style.css
@@ -51,13 +51,14 @@ section h2 {
     font-size: 24px; /* Tamaño de fuente para los títulos de sección */
     margin-bottom: 10px; /* Margen inferior para separar el título del contenido */
 }
-
-
-
-
+#institucion h2 {
+    text-align: center;
+    font-weight: bold;
+}
 #inicio {
-    background-color: #B5D9FC;
     padding: 50px 0;
+    background-color:lightskyblue;
+
 }
 
 .inicio-container {
@@ -66,6 +67,7 @@ section h2 {
     align-items: center;
     width: 80%;
     margin: 0 auto;
+    
 }
 
 .texto {
